# Claude-Test-01

./: .gitignore  CMakeLists.txt  Makefile  README.md  anagram-gas.s  anagram.asm  anagram64.asm  anagram64.s  dict-en.txt  dict-fr.txt
config/: default.yaml
include/soda/: application.hpp  audio_decoder.hpp  audio_engine.hpp  config_manager.hpp  event_bus.hpp  file_utils.hpp  http_client.hpp  js_bridge.hpp  local_source.hpp  metadata_reader.hpp  playlist.hpp  plugin_interface.hpp  plugin_manager.hpp  podcast_source.hpp  queue.hpp  skin_manager.hpp  soda.hpp  source_manager.hpp  string_utils.hpp  webview_window.hpp  youtube_source.hpp
skins/default-dark/: index.html  manifest.yaml  script.js  style.css
skins/default-light/: index.html  manifest.yaml  script.js  style.css
src/: main.cpp
src/audio/: audio_decoder.cpp  audio_engine.cpp  playlist.cpp  queue.cpp
src/config/: config_manager.cpp  settings.cpp
src/core/: application.cpp  event_bus.cpp
src/plugins/: plugin_interface.cpp  plugin_manager.cpp
src/sources/: local_source.cpp  podcast_source.cpp  source_manager.cpp  youtube_source.cpp
src/ui/: js_bridge.cpp  skin_manager.cpp  webview_window.cpp
src/utils/: file_utils.cpp  http_client.cpp  metadata_reader.cpp  string_utils.cpp
tests/: CMakeLists.txt  test_main.cpp  test_playlist.cpp  test_queue.cpp  test_string_utils.cpp
